--- a/index.html
+++ b/index.html
@@ -12,9 +12,34 @@
     <nav>
         <ul>
             <li><a href = "index.html">HOME</a></li>
-            <li><a href = "#">ASIA</a></li>
-            <li><a href = "#">EUROPE</a></li>
-            <li><a href = "#">NORTH AMERICA</a></li>
+            <li><div class="dropdown">
+                    <button class="dropbtn">ASIA 
+                      <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                      <a href="#china">CHINA</a>
+                      <a href="#japan">JAPAN</a>
+                    </div>
+            </div> </li>
+            <li><div class="dropdown">
+                    <button class="dropbtn">EUROPE 
+                      <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                      <a href="#italy">ITALY</a>
+                      <a href="#france">FRANCE</a>
+                      <a href="#spain">SPAIN</a>
+                    </div>
+            </div> </li>
+            <li><div class="dropdown">
+                    <button class="dropbtn">NORTH AMERACA 
+                      <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                      <a href="#califorina">CALIFORNIA</a>
+                      <a href="#nevada">NEVADA</a>
+                    </div>
+            </div> </li>
             <li><a href = "#">CONTACTS</a></li>
         </ul>
     </nav>
